# Scalar-RL

./: .gitignore  push_error.txt
incident-response-env/: .env  app.py  environment.py  incident_response_env_MASTER_PROMPT.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
incident-response-env/data/scenarios/: easy_001.json  easy_002.json  hard_001.json  medium_001.json
incident-response-env/graders/: grader.py
incident-response-env/tasks/: task_medium.py
incident_response_submission/: Dockerfile  README.md  environment.py  inference.py  openenv.yaml  requirements.txt  validate-submission.sh
incident_response_submission/data/: generate_scenarios.py
incident_response_submission/data/scenarios/: hard_002.json  medium_002.json
incident_response_submission/graders/: grader.py
incident_response_submission/server/: app.py
incident_response_submission/tasks/: task_easy.py  task_hard.py
incident_response_submission/tests/: test_environment.py
